# weycoin

./: .gitignore  COPYING  INSTALL  Makefile.am  Makefile.in  README.md  aclocal.m4  autogen.sh  background.tiff  configure  configure.ac  dpi36.background.tiff  dpi72.background.tiff  libweycoinconsensus.pc.in  local_bdb.sh
autom4te.cache/: output.0  output.0 2  output.1  output.2  output.3  requests  traces.0  traces.0 2  traces.1  traces.2  traces.3
build-aux/m4/: weycoin_find_bdb48.m4  weycoin_qt.m4  weycoin_subdir_to_include.m4
contrib/: README.md  bitcoin-qt.pro  gitian-build.sh  install-dependencies-debian.sh  qt_translations.py  tidy_datadir.sh  weycoin-cli.bash-completion  weycoin-qt.pro  weycoin-tx.bash-completion  weycoind.bash-completion
contrib/bitrpc/: README.md  bitrpc.py
contrib/debian/: README.md  bitcoin-qt.desktop  bitcoin-tx.manpages  bitcoind.manpages  changelog  control  copyright  rules  watch  weycoin-qt.desktop  weycoin-qt.install  weycoin-qt.lintian-overrides  weycoin-qt.manpages  weycoin-qt.protocol  weycoin-tx.bash-completion  weycoin-tx.install  weycoind.bash-completion  weycoind.examples  weycoind.install  weycoind.lintian-overrides  weycoind.manpages
contrib/devtools/: README.md  check-doc.py  copyright_header.py  fix-copyright-headers.py  gen-manpages.sh  git-subtree-check.sh  github-merge.py  optimize-pngs.py  security-check.py  split-debug.sh  symbol-check.py  test-security-check.py  update-translations.py
contrib/gitian-descriptors/: README.md  deps-linux.yml  deps-win.yml  gitian-linux.yml  gitian-osx-dash.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win-signer.yml  gitian-win.yml  qt-win.yml
contrib/gitian-downloader/: linux-download-config  win32-download-config
contrib/gitian-keys/: petertodd-key.pgp
contrib/init/: README.md  org.bitcoin.bitcoind.plist  weycoind.conf  weycoind.init  weycoind.openrc  weycoind.openrcconf  weycoind.service  weycoind.service.app
contrib/linearize/: README.md  example-linearize.cfg  linearize-data.py  linearize-hashes.py  linearize.py
contrib/macdeploy/: README.md  custom_dsstore.py  detached-sig-apply.sh  detached-sig-create.sh  extract-osx-sdk.sh  fancy.plist  macdeployqtplus
contrib/pyminer/: README.md  pyminer.py
contrib/qos/: README.md  tc.sh
contrib/seeds/: README.md  generate-seeds.py  makeseeds.py  nodes_main.txt  (+1 more)
depends/: README  README.usage  config.guess  config.site.in
doc/: Doxyfile  README.md  README_osx.md  README_windows.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  build-masternode.md  build-openbsd.md  build-osx.md  build-remote-masternode.md  build-unix.md  build-windows.md  coding.md  developer-notes.md  dnsseed-policy.md  fuzzing.md  gitian-building.md  guide-startmany.md  init.md  keepass.md  masternode_conf.md  multiwallet-qt.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  travis-ci.md  unit-tests.md  weycoin.conf.sample  zmq.md
qa/: README.md
share/: genbuild.sh  setup.nsi.in  ui.rc
src/: Makefile.am  Makefile.am.weycoin  Makefile.bench.include  Makefile.in  Makefile.include  Makefile.leveldb.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  activemasternode.cpp  activemasternode.h  addrdb.cpp  addrdb.h  addrman.cpp  addrman.h  alert.cpp  alert.h  allocators.cpp  allocators.h  amount.cpp  amount.h  arith_uint256.cpp  arith_uint256.h  base58.cpp  base58.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoind-res.rc  bitcoind.cpp  bitpool.cpp  blockencodings.cpp  blockencodings.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  (+133 more)
src/qt/: Makefile.am  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  bip38tooldialog.cpp  bip38tooldialog.h  bitcoin.cpp  bitcoin.qrc  bitcoingui.cpp  bitcoinstrings.cpp  bitcoinunits.cpp  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  darksendconfig.cpp  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  macnotificationhandler.mm  masternodelist.cpp  modaloverlay.cpp  modaloverlay.h  monitoreddatamapper.cpp  (+80 more)
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  coincontroldialog.ui  darksendconfig.ui  debugwindow.ui  helpmessagedialog.ui  intro.ui  modaloverlay.ui  optionsdialog.ui  overviewpage.ui  paperwalletdialog.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: bitcoin_af.ts  bitcoin_af_ZA.ts  bitcoin_ar.ts  bitcoin_be_BY.ts  bitcoin_bg.ts  bitcoin_bg_BG.ts  bitcoin_bs.ts  bitcoin_ca.ts  bitcoin_ca@valencia.ts  bitcoin_ca_ES.ts  bitcoin_cs.ts  bitcoin_cy.ts  bitcoin_da.ts  bitcoin_de.ts  bitcoin_de_DE.ts  bitcoin_el.ts  bitcoin_el_GR.ts  bitcoin_en.ts  bitcoin_en_AU.ts  bitcoin_en_GB.ts  bitcoin_eo.ts  bitcoin_es.ts  bitcoin_es_CL.ts  bitcoin_es_CO.ts  bitcoin_es_DO.ts  bitcoin_es_ES.ts  bitcoin_et.ts  bitcoin_fa.ts  bitcoin_fa_IR.ts  bitcoin_fi.ts  bitcoin_fr.ts  bitcoin_fr_FR.ts  bitcoin_gl.ts  bitcoin_he.ts  bitcoin_he_IL.ts  bitcoin_hr.ts  bitcoin_hu.ts  bitcoin_id_ID.ts  bitcoin_it.ts  bitcoin_ja.ts  (+120 more)
src/qt/res/: bitcoin-qt-res.rc  weycoin-qt-res.rc
src/qt/res/css/: weycoin_main.css  weycoin_theme-backup.css  weycoin_theme1.css  weycoin_theme2.css  weycoin_theme3.css
src/qt/res/icons/: bitcoinff.icns  weycoin.icns
src/qt/res/movies/: makespinner.sh
src/qt/test/: Makefile.am  compattests.cpp  compattests.h  moc_compattests.cpp  moc_paymentservertests.cpp  moc_rpcnestedtests.cpp  moc_uritests.cpp  moc_wallettests.cpp  paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  rpcnestedtests.cpp  rpcnestedtests.h  test_main.cpp  uritests.cpp  uritests.h
(+501 files in other folders)
